--- a/Progetto_test_fantacalcio/Progetto_test_fantacalcio/List/Progetto_test_fantacalcio/Base.lproj/List.storyboard
+++ b/Progetto_test_fantacalcio/Progetto_test_fantacalcio/List/Progetto_test_fantacalcio/Base.lproj/List.storyboard
@@ -1,28 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="11R-0c-nI2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YHr-gp-ZdP">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Lista Calciatori-->
-        <scene sceneID="V5u-gR-Jow">
+        <!--List Table View Controller-->
+        <scene sceneID="CoJ-B0-GMx">
             <objects>
-                <viewController id="11R-0c-nI2" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="GeB-Vo-2Qi">
+                <tableViewController id="4ak-jC-cO3" customClass="ListTableViewController" customModule="Progetto_test_fantacalcio" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="JsO-Mg-eWy">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Grd-l0-C0n"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Lista Calciatori" image="person.fill" catalog="system" id="TlY-dJ-McY"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aAJ-pi-7Jc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <connections>
+                            <outlet property="dataSource" destination="4ak-jC-cO3" id="DvR-Vv-cfK"/>
+                            <outlet property="delegate" destination="4ak-jC-cO3" id="Sp2-eq-4eF"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="gZt-iL-c8a"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FDa-ZJ-B9T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="421" y="-218"/>
+            <point key="canvasLocation" x="1098.4732824427481" y="-215.49295774647888"/>
+        </scene>
+        <!--Lista Calciatori-->
+        <scene sceneID="oci-cc-7bF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YHr-gp-ZdP" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Lista Calciatori" image="person.fill" catalog="system" id="e5S-6C-iY8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="N2f-fX-gvM">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="4ak-jC-cO3" kind="relationship" relationship="rootViewController" id="l9Y-vK-wpp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TQy-ol-kKt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="171.75572519083968" y="-215.49295774647888"/>
         </scene>
     </scenes>
     <resources>
