--- a/Progetto_test_fantacalcio/Progetto_test_fantacalcio/Favourites/FavouriteTableViewCell/FavouriteTableViewCell.xib
+++ b/Progetto_test_fantacalcio/Progetto_test_fantacalcio/Favourites/FavouriteTableViewCell/FavouriteTableViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="118" id="KGk-i7-Jjw" customClass="FavouriteTableViewCell" customModule="Progetto_test_fantacalcio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="118"/>
+            <rect key="frame" x="0.0" y="0.0" width="514" height="118"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="118"/>
+                <rect key="frame" x="0.0" y="0.0" width="514" height="118"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ca-Hb-4E6">
-                        <rect key="frame" x="16" y="8" width="288" height="102"/>
+                        <rect key="frame" x="16" y="8" width="482" height="102"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="SDt-Ua-VNU">
                                 <rect key="frame" x="8" y="8" width="102.66666666666667" height="86"/>
@@ -58,10 +58,38 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="QQa-Ol-B3q">
+                                <rect key="frame" x="330" y="42.666666666666664" width="136" height="17"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nxc-wo-HE6">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="LCX-Rv-JAD"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.0" green="0.11764705882352941" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Udy-c4-v35">
+                                        <rect key="frame" x="48" y="0.0" width="40" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.0" green="0.11764705882352941" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r5y-Mq-MNw">
+                                        <rect key="frame" x="96" y="0.0" width="40" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.0" green="0.11764705882352941" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="QQa-Ol-B3q" secondAttribute="trailing" constant="16" id="9dH-pw-T9O"/>
                             <constraint firstItem="SDt-Ua-VNU" firstAttribute="top" secondItem="3ca-Hb-4E6" secondAttribute="top" constant="8" id="Dpo-e9-GK9"/>
+                            <constraint firstItem="QQa-Ol-B3q" firstAttribute="centerY" secondItem="3ca-Hb-4E6" secondAttribute="centerY" id="oJf-J7-52A"/>
                             <constraint firstAttribute="bottom" secondItem="SDt-Ua-VNU" secondAttribute="bottom" constant="8" id="uwf-gu-iyT"/>
                             <constraint firstItem="SDt-Ua-VNU" firstAttribute="leading" secondItem="3ca-Hb-4E6" secondAttribute="leading" constant="8" id="vSW-d8-NNM"/>
                         </constraints>
@@ -76,13 +104,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="averageFantaGradeLabel" destination="r5y-Mq-MNw" id="Qpw-6k-KgT"/>
+                <outlet property="averageGradeLabel" destination="Udy-c4-v35" id="vwk-13-EVB"/>
                 <outlet property="cornerView" destination="3ca-Hb-4E6" id="gCF-7O-YKk"/>
-                <outlet property="playerImage" destination="wqI-kH-1yi" id="Huf-f8-Nsr"/>
+                <outlet property="playedGamesLabel" destination="Nxc-wo-HE6" id="4rt-aC-MlP"/>
                 <outlet property="playerImageBackground" destination="I9e-zc-VtR" id="7Ap-sF-5aG"/>
-                <outlet property="playerName" destination="z5q-0E-NDJ" id="uJU-mU-szf"/>
-                <outlet property="playerTeam" destination="v9i-7f-TlD" id="Iqs-0a-3Zm"/>
+                <outlet property="playerImageView" destination="wqI-kH-1yi" id="Uh1-xJ-Nu5"/>
+                <outlet property="playerNameLabel" destination="z5q-0E-NDJ" id="jB2-bX-zxM"/>
+                <outlet property="playerTeamLabel" destination="v9i-7f-TlD" id="wWl-n2-VID"/>
             </connections>
-            <point key="canvasLocation" x="129.7709923664122" y="46.478873239436624"/>
+            <point key="canvasLocation" x="277.86259541984731" y="46.478873239436624"/>
         </tableViewCell>
     </objects>
 </document>
